2008-06-06  Evan Monroig  <evan.monroig@gmail.com>

	* matrix.lisp (flatten-matrix-indices): fixed strided-matview
	method
	(transpose-class, window-class, stride-class): new methods to
	determine which class to instanciate

	* matrix-lisp-array.lisp: add classes for views

	* matrix-foreign-array.lisp: add classes for views

	* lapack-utils.lisp (def-lapack-method): update to specialize on
	the base class of a matrix

2008-06-05  Evan Monroig  <evan.monroig@gmail.com>

	* lapack-methods.lisp: added as commented code a basic call to
	DGEMM using matrices based on lisp arrays

	* lapack-utils.lisp: added comments on how to proceed with CFFI
	and fortran types

	* lapack-methods.lisp: updated -- works only for foreign array
	based implementation and not for MATVIEW matrices (for this I need
	to define a common class type that groups normal matrices and
	MATVIEW matrices of one implementation and one element-type)

	* lapack-utils.lisp: updated

	* tests.lisp: updated all tests except GEMM for MATVIEWs which
	doesn't work

	* old/fnv-matrix.lisp: moved the old implementation here

	* matrix-foreign-array.lisp: implementation based on foreign
	arrays

	* matrix-lisp-array.lisp: implementation based on lisp arrays

	* matrix.lisp: rewritten the matrix class interface

2008-06-04  Evan Monroig  <evan.monroig@gmail.com>

	* experimental/matrix.lisp: started to rewrite the matrix class
	interface to add FFA arrays as well

2008-05-20  Evan Monroig  <evan.monroig@gmail.com>

	* experimental/element-access.lisp (with-fast-access): try at
	using a higher-level macro that defines local macros to override
	VREF and gain 10x speed.

2008-05-19  Evan Monroig  <evan.monroig@gmail.com>

	* experimental/element-access.lisp: add execution times

	* benchmark/lisp-vs-c-aref.lisp: moved experimental benchmarks to
	experimental/element-access.lisp

	* experimental/element-access.lisp: clean up and add some
	documentation - these are just experiments anyway
