@@ -3,7 +3,7 @@
 ;;;; This file contains functions and macros to help build LAPACK
 ;;;; wrapper methods.
 ;;;;
-;;;; Time-stamp: <2008-06-05 17:05:18 Evan Monroig>
+;;;; Time-stamp: <2008-06-06 09:43:17 Evan Monroig>
 ;;;;
 ;;;;
 ;;;;
@@ -229,9 +229,8 @@
           (let ((replacements
                  `((!function . ,(make-symbol* "%" type-letter name))
                    (!data-type . ,type)
-                   (!matrix-type . ,(fa-matrix-class
-                                     (fnv-type->element-type type)
-                                     :base))
+                   (!matrix-type . ,(matrix-class :base "FA"
+                                                  (symbol-name type)))
                    (!element-type . ,(fnv-type->element-type type)))))
             `(defmethod ,name
                  ,(sublis replacements lambda-list)
